issue-283 Fix vertical alignment of tag close button

--- a/packages/matchbox/src/components/Tag/Tag.module.scss
+++ b/packages/matchbox/src/components/Tag/Tag.module.scss
@@ -1,8 +1,9 @@
 @import '../../styles/config';
 
 .Tag {
-  display: inline-block;
+  display: inline-flex;
   white-space: nowrap;
+  align-items: center;
 }
 
 .hasRemove {
